# report_gen

./: .gitignore  app.py  pyproject.toml  requirements.txt
Files/Input/: Campaign Report.xlsx  Domain Report.xlsx
Files/Output/: Post Campaign Insights & Recommendations.docx
docs/: Implementation.md  calculation.docx  calculations.md  components.md  overview.md  plan.md  prompts.md  summary.md
outputs/: output_v1.json  sample_stat.json  test_report_with_charts.docx
src/: exceptions.py
src/analytics/: __init__.py  calculator.py  expressions.py  insights.py  models.py  stats.py
src/config/: schema_registry.yaml
src/ingestion/: __init__.py  cleaner.py  enricher.py  loader.py  validator.py
src/models/: __init__.py  campaign_report.py  domain_report.py  stat_pack.py
src/services/: __init__.py  report_service.py
tests/: test_analytics.py  test_analytics_simple.py  test_ingestion.py  test_report.py
