[tool.poetry]
name = "ad-insights"
version = "0.1.0"
description = "Ad campaign insights generator"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
polars = ">=1.0.0"
pydantic = ">=2.0.0"
pyyaml = ">=6.0"
fastexcel = ">=0.11.0"
scipy = ">=1.11.0"
numpy = ">=1.24.0"
streamlit = ">=1.30.0"
plotly = ">=5.18.0"
python-docx = ">=1.0.0"
kaleido = ">=0.2.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"
pytest-cov = ">=4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
